--- a/PRG282_02.csproj
+++ b/PRG282_02.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Read.cs" />
     <Compile Include="Save.cs" />
     <Compile Include="Student.cs" />
     <EmbeddedResource Include="Form1.resx">
