--- a/PRG282_02.csproj
+++ b/PRG282_02.csproj
@@ -46,18 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="PresentationLayer\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="PresentationLayer\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Read.cs" />
-    <Compile Include="Save.cs" />
-    <Compile Include="Student.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="FileHandling\Read.cs" />
+    <Compile Include="FileHandling\Save.cs" />
+    <Compile Include="LogicLayer\Student.cs" />
+    <EmbeddedResource Include="PresentationLayer\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
